0.8.1 (currently working on)
- [#3244] Change: Remove the check in the BE module concerning whether there are any records on the page
- [#2646] Fix: Config check does not complain if loginPID is empty on list view page
- [#3010] Fix: The event type drop-down has two empty options
- [#3257] Fix: The relation place -> country should use not use the UID, but the alpha2 code
- [#3223] Fix: Label for terms_2 is missing in the registration form
- [#3214] Fix: CSS validation error in the FE editor CSS
- [#1867] Feature: Add a try/catch construct around the seminars and onetimeaccount pi1/pi2/mod1/mod2/cli main function
- [#3217] Fix: Replace deprecated split() from tx_seminars_seminarbagbuilder->limitToFullTextSearch()
- [#3168] Fix: The "my entered events" and "my managed events" lists shouldn't use any time-frame limitations
- [#3160] Fix: Two tests don't work properly
- [#3165] Fix: Umlauts not encoded correctly in the e-mail subject
- [#3159] Fix: Missing config check for allowRegistrationForEventsWithoutDate

0.8.0 (released 2009-07-01)
- [#2773] Fix: 3 registration records created when registering with IE 6
- [#3146] Fix: $uid is not initialized in registration::setRegistrationData
- [#3151] Fix: SQL error on the registration page with latest static_info_tables
- [#3142] Fix: Test failures with base64 encoding
- [#2234] Change: Use $GLOBALS['SIM_ACCESS_TIME'] instead of time() in seminars
- [#3128] Change: Remove the referrer field from the registrations
- [#557] Change: Use Tabs for the BE edit form of registration records
- [#1967] Change: In the registration TCEforms, put the billing address data in a tab "billing address"
- [#3080] Change: Use the object factory
- [#3000] Fix: Intval showUid
- [#3050] Change: In the flexforms tab "list view", use the GRSP settings when selecting records
- [#3007] Fix: Add attached_files to hideFields
- [#2701] Fix: Image of a seminar was not displayed in single view