@@ -1,4 +1,5 @@
 0.8.1 (currently working on)
+- [#3304] Fix: Crash on registration if a place has an invalid country
 - [#3244] Change: Remove the check in the BE module concerning whether there are any records on the page
 - [#2646] Fix: Config check does not complain if loginPID is empty on list view page
 - [#3010] Fix: The event type drop-down has two empty options
